2011-03-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/graph/view3D/spadAction3d.c,
	src/graph/include/actions.h
	src/graph/viewman/fun3D.c: Implement getting/setting
	viewpoint.

2011-03-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/tex.spad.pamphlet,
	src/algebra/texmacs.spad.pamphlet: Fix priority of unary
	minus.

2011-03-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/tex.spad.pamphlet: Change to use symbols.
	src/algebra/texmacs.spad.pamphlet: Likewise, remove
	useless code.

2011-03-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gseries.spad.pamphlet: Remove useless imports.

2011-03-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/contfrac.spad.pamphlet: Use symbol in
	OutputForm.

2011-03-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet: Use PRIME as
	output form for derivatives.
	src/algebra/tex.spad.pamphlet,
	src/algebra/texmacs.spad.pamphlet,
	src/algebra/formula.spad.pamphlet,
	src/interp/property.lisp,
	src/interp/i-output.boot: Adjust.

2011-03-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Remove Spad to Aldor translator.
	* src/interp/mark.boot, src/interp/pspad1.boot,
	src/interp/pspad2.boot, src/interp/wi1.boot,
	src/interp/wi2.boot: Remove.
	src/interp/compiler.boot, src/interp/util.lisp,
	src/interp/Makefile.in: Adjust.

2011-03-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/parsing.lisp, src/interp/bootlex.lisp:
	Better error messages for Spad parsing errors.

2011-03-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Coerce constant strings
	to symbols at compile time.

2011-03-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet,
	src/algebra/complet.spad.pamphlet: Use symbols in
	OutputForm.

2011-03-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in, src/etc/Makefile.in: Rename axiom to fricas.
	src/etc/axiom: Rename to src/etc/fricas
