@@ -70,7 +70,7 @@ Character: OrderedFinite() with
             ++ i.e. one of 0..9, a..z or A..Z.
 
     == add
-        Rep := SingleInteger      -- 0..255
+        Rep := SingleInteger      -- 0..(1114112 - 1)
 
         CC ==> CharacterClass()
         import CC
@@ -79,23 +79,21 @@ Character: OrderedFinite() with
         --    [ digit(), hexDigit(),
         --      upperCase(), lowerCase(), alphabetic(), alphanumeric() ]
 
-        OutChars:PrimitiveArray(OutputForm) :=
-           construct [NUM2CHAR(i)$Lisp for i in 0..255]
-
-        minChar := minIndex OutChars
-
         a = b                  == a =$Rep b
         a < b                  == a <$Rep b
-        size()                 == 256
+        -- size()                 == 256
+        size()                 == 1114112
         index n                == char((n - 1)::Integer)
         lookup c               == (1 + ord c)::PositiveInteger
         char(n:Integer)        == n::%
         ord c                  == convert(c)$Rep
-        random()               == char(random(size())$Integer)
+        -- random()               == char(random(size())$Integer)
+        -- FIXME: limit to ASCII for now
+        random()               == char(random(128)$Integer)
         space                  == QENUM("   ", 0$Lisp)$Lisp
         quote                  == QENUM("_" ", 0$Lisp)$Lisp
         escape                 == QENUM("__ ", 0$Lisp)$Lisp
-        coerce(c:%):OutputForm == OutChars(minChar + ord c)
+        coerce(c:%):OutputForm == NUM2USTR(ord c)$Lisp
         digit? c               == member?(c pretend Character, digit())
         hexDigit? c            == member?(c pretend Character, hexDigit())
         upperCase? c           == member?(c pretend Character, upperCase())
@@ -168,7 +166,8 @@ CharacterClass: Join(SetCategory, ConvertibleTo String,
 
     == add
         Rep := IndexedBits(0)
-        N   := size()$Character
+        -- N   := size()$Character
+        N   := 256
 
         a, b: %
 
@@ -181,10 +180,14 @@ CharacterClass: Join(SetCategory, ConvertibleTo String,
 
         a = b           == a =$Rep b
 
-        member?(c, a)   == a(ord c)
+        member?(c, a)   ==
+            (i := ord c) < N => a(i)
+            false
+
         union(a,b)      == Or(a, b)
         intersect (a,b) == And(a, b)
         difference(a,b) == And(a, Not b)
+        -- FIXME: this is bogus for codes >= N
         complement a    == Not a
 
         convert(cl):String ==
@@ -193,14 +196,18 @@ CharacterClass: Join(SetCategory, ConvertibleTo String,
           [char(i) for i in 0..N-1 | cl.i]
 
         charClass(s: String) ==
-          cl := new(N, false)
-          for i in minIndex(s)..maxIndex(s) repeat cl(ord s.i) := true
-          cl
+            cl := new(N, false)
+            for i in minIndex(s)..maxIndex(s) repeat
+                (j := ord s.i) >= N => error "character code too large"
+                cl(j) := true
+            cl
 
         charClass(l: List Character) ==
-          cl := new(N, false)
-          for c in l repeat cl(ord c) := true
-          cl
+            cl := new(N, false)
+            for c in l repeat
+                (j := ord c) >= N => error "character code too large"
+                cl(j) := true
+            cl
 
         coerce(cl):OutputForm == (convert(cl)@String)::OutputForm
 
@@ -209,13 +216,19 @@ CharacterClass: Join(SetCategory, ConvertibleTo String,
         empty():%       == charClass []
         brace():%       == charClass []
 
-        insert_!(c, a)  == (a(ord c) := true; a)
-        remove_!(c, a)  == (a(ord c) := false; a)
+        insert_!(c, a)  ==
+            (i := ord c) < N => (a(i) := true; a)
+            error "character code too large"
+
+        remove_!(c, a)  ==
+            if(i := ord c) < N then a(i) := false
+            a
 
         inspect(a) ==
             for i in 0..N-1 | a.i repeat
                  return char i
             error "Cannot take a character from an empty class."
+
         extract_!(a) ==
             for i in 0..N-1 | a.i repeat
                  a.i := false
@@ -451,7 +464,16 @@ the coercion.
 ++   This is the domain of character strings.
 MINSTRINGINDEX ==> 1          -- as of 3/14/90.
 
-String(): StringCategory == IndexedString(MINSTRINGINDEX) add
+String(): StringCategory with
+
+    ucodeToString : Integer -> %
+      ++ ucodeToString(n) converts Unicode code point to one-character
+      ++ string.  If UTF-8 is in use the string may contain multiple
+      ++ octets.
+
+  == IndexedString(MINSTRINGINDEX) add
+
+    ucodeToString(n : Integer) : %       == NUM2USTR(n)$Lisp
     string n == STRINGIMAGE(n)$Lisp
 
     OMwrite(x: %): String ==
