@@ -1,5 +1,14 @@
 2011-03-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/algebra/string.spad.pamphlet,
+	src/interp/scan.boot, src/interp/sys-pkg.lisp: Unicode fixes.
+	src/interp/vmlisp.lisp: Add NUM2USTR.
+
+
+
+
+2011-03-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/graph/view3D/spadAction3d.c,
 	src/graph/include/actions.h
 	src/graph/viewman/fun3D.c: Implement getting/setting
